# metric-contract-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/metric_contract_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_metric_contract_check.py
